src/objects/Class__c.object
<CustomObject>
    <fields>
        <fullName>Board__c</fullName>
        <label>Board</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Board</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Class_Teacher_Name__c</fullName>
        <label>Class Teacher Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coordinator__c</fullName>
        <label>Coordinator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Students__c</fullName>
        <label>No of Students</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <label>School</label>
        <referenceTo>School__c</referenceTo>
        <relationshipLabel>Classes</relationshipLabel>
        <relationshipName>Classes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Class</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Board__c</columns>
        <columns>Class_Teacher_Name__c</columns>
        <columns>No_of_Students__c</columns>
        <columns>School__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classes</pluralLabel>
    <recordTypes>
        <fullName>CBSE</fullName>
        <active>true</active>
        <description>For CBSE Classes.</description>
        <label>CBSE</label>
    </recordTypes>
    <recordTypes>
        <fullName>RBSE</fullName>
        <active>true</active>
        <description>For RBSE Classes.</description>
        <label>RBSE</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>